@@ -1,5 +1,11 @@
 2004-11-21  Paolo Borelli  <pborelli@katamail.com>
 
+	dialogs/gedit-encodings-dialog.glade2: remove separator.
+	dialogs/gedit-encodings-dialog.c: use g_slist_find instead of
+	reimplementing it.
+
+2004-11-21  Paolo Borelli  <pborelli@katamail.com>
+
 	dialogs/gedit-plugin-manager.c: use gtk_tree_model_get_iter_first
 	instead of the deprecated gtk_tree_model_get_iter_root.
 
